--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>background generator</h1>
     <input type="color" class="color1" name="color1" value="#0000ff">
     <input type="color" class="color2"  name="color2" value="#ff0000">
-    <h2>Current CSS Background</h2>
+    <h2>Current CSS background</h2>
     <h3 id="h3"></h3>
     <script type="text/javascript" src="script.js"></script>
 </body>
