--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body >
-    <h1>background generator</h1>
+    <h1>Your Background Generator</h1>
     <input type="color" class="color1" name="color1" value="#0000ff">
     <input type="color" class="color2"  name="color2" value="#ff0000">
     <h2>Current CSS background</h2>
